--- a/WebJar-app/pom.xml
+++ b/WebJar-app/pom.xml
@@ -118,6 +118,21 @@
 			<version>2.1.8</version>
 		</dependency>
 		
+		
+		<!-- https://mvnrepository.com/artifact/org.webjars/angular-chart.js -->
+		<dependency>
+		    <groupId>org.webjars</groupId>
+		    <artifactId>angular-chart.js</artifactId>
+		    <version>1.1.1</version>
+		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/org.webjars/chartjs -->
+		<dependency>
+		    <groupId>org.webjars</groupId>
+		    <artifactId>chartjs</artifactId>
+		    <version>2.7.2</version>
+		</dependency>
+		
 		<dependency>
 			<groupId>org.webjars</groupId>
 			<artifactId>webjars-locator</artifactId>
