--- a/WebJar-app/pom.xml
+++ b/WebJar-app/pom.xml
@@ -154,6 +154,13 @@
 		    <version>3.3.9</version>
 		</dependency>
 
+		
+		<dependency>
+		  <groupId>org.apache.commons</groupId>
+		  <artifactId>commons-configuration2</artifactId>
+		  <version>2.2</version>
+		</dependency>
+
 <!-- 
 
 		<dependency>
