--- a/WebJar-app/pom.xml
+++ b/WebJar-app/pom.xml
@@ -161,6 +161,14 @@
 		  <version>2.2</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/net.sf.dozer/dozer -->
+		<dependency>
+		    <groupId>net.sf.dozer</groupId>
+		    <artifactId>dozer</artifactId>
+		    <version>5.5.1</version>
+		</dependency>
+
+
 <!-- 
 
 		<dependency>
