--- a/WebJar-app/pom.xml
+++ b/WebJar-app/pom.xml
@@ -154,6 +154,26 @@
 		    <version>3.3.9</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.webjars/raphaeljs -->
+		<dependency>
+		    <groupId>org.webjars</groupId>
+		    <artifactId>raphaeljs</artifactId>
+		    <version>2.1.4</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.webjars/morrisjs -->
+		<dependency>
+		    <groupId>org.webjars</groupId>
+		    <artifactId>morrisjs</artifactId>
+		    <version>0.5.1</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.webjars/jquery -->
+		<dependency>
+		    <groupId>org.webjars</groupId>
+		    <artifactId>jquery</artifactId>
+		    <version>1.9.1</version>
+		</dependency>
 		
 		<dependency>
 		  <groupId>org.apache.commons</groupId>
