--- a/WebJar-app/pom.xml
+++ b/WebJar-app/pom.xml
@@ -174,6 +174,20 @@
 		    <artifactId>jquery</artifactId>
 		    <version>1.9.1</version>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.webjars.bower/jquery-flot -->
+		<dependency>
+		    <groupId>org.webjars.bower</groupId>
+		    <artifactId>jquery-flot</artifactId>
+		    <version>0.8.3</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.webjars/flot -->
+		<dependency>
+		    <groupId>org.webjars</groupId>
+		    <artifactId>flot</artifactId>
+		    <version>0.8.3-1</version>
+		</dependency>
+
 		
 		<dependency>
 		  <groupId>org.apache.commons</groupId>
