--- a/WebJar-app/pom.xml
+++ b/WebJar-app/pom.xml
@@ -38,7 +38,7 @@
 			<artifactId>commons-validator</artifactId>
 			<version>1.5.1</version>
 		</dependency>
-		
+
 		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.datatype/jackson-datatype-guava -->
 		<dependency>
 			<groupId>com.fasterxml.jackson.datatype</groupId>
@@ -140,7 +140,14 @@
 		<dependency>
 			<groupId>org.webjars</groupId>
 			<artifactId>angular-ui-bootstrap</artifactId>
-			<version>1.3.1</version>
+			<version>2.5.0</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.webjars.bower/bootstrap -->
+		<dependency>
+			<groupId>org.webjars.bower</groupId>
+			<artifactId>bootstrap</artifactId>
+			<version>3.3.7</version>
 		</dependency>
 
 		<dependency>
@@ -203,7 +210,7 @@
 		<dependency>
 			<groupId>org.webjars</groupId>
 			<artifactId>jquery</artifactId>
-			<version>1.9.1</version>
+			<version>3.1.1</version>
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.webjars.bower/jquery-flot -->
@@ -241,12 +248,11 @@
 			</dependency> <dependency> <groupId>org.webjars</groupId> <artifactId>ng-csv</artifactId> 
 			<version>0.3.1</version> </dependency> <dependency> <groupId>org.webjars.bower</groupId> 
 			<artifactId>angular-currency-format</artifactId> <version>1.0.6</version> 
-			</dependency> <dependency> <groupId>org.webjars</groupId> <artifactId>bootstrap</artifactId> 
-			<version>1.3.1</version> </dependency> <dependency> <groupId>org.webjars</groupId> 
-			<artifactId>angularjs-dropdown-multiselect</artifactId> <version>1.11.8</version> 
-			</dependency> <dependency> <groupId>org.webjars</groupId> <artifactId>angular-sanitize</artifactId> 
-			<version>1.3.11</version> </dependency> <dependency> <groupId>org.webjars</groupId> 
-			<artifactId>datatables</artifactId> <version>1.10.16</version> </dependency> -->
+			</dependency> <dependency> <groupId>org.webjars</groupId> <artifactId>angularjs-dropdown-multiselect</artifactId> 
+			<version>1.11.8</version> </dependency> <dependency> <groupId>org.webjars</groupId> 
+			<artifactId>angular-sanitize</artifactId> <version>1.3.11</version> </dependency> 
+			<dependency> <roupId>org.webjars</groupId> <artifactId>datatables</artifactId>
+			<version>1.10.16</version> </dependency> -->
 
 
 
