--- a/WebJar-app/pom.xml
+++ b/WebJar-app/pom.xml
@@ -32,6 +32,13 @@
 			<version>2.6</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.javamoney</groupId>
+			<artifactId>moneta</artifactId>
+			<version>1.1</version>
+		</dependency>
+
+
 		<!-- https://mvnrepository.com/artifact/commons-validator/commons-validator -->
 		<dependency>
 			<groupId>commons-validator</groupId>
@@ -251,7 +258,7 @@
 			</dependency> <dependency> <groupId>org.webjars</groupId> <artifactId>angularjs-dropdown-multiselect</artifactId> 
 			<version>1.11.8</version> </dependency> <dependency> <groupId>org.webjars</groupId> 
 			<artifactId>angular-sanitize</artifactId> <version>1.3.11</version> </dependency> 
-			<dependency> <roupId>org.webjars</groupId> <artifactId>datatables</artifactId>
+			<dependency> <roupId>org.webjars</groupId> <artifactId>datatables</artifactId> 
 			<version>1.10.16</version> </dependency> -->
 
 
