--- a/WebJar-app/pom.xml
+++ b/WebJar-app/pom.xml
@@ -118,7 +118,11 @@
 		<!-- <dependency> <groupId>org.springframework.boot</groupId> <artifactId>spring-boot-starter-jta-bitronix</artifactId> 
 			</dependency> -->
 
-
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+			<version>2.6.5</version>
+		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.webjars/angularjs -->
 		<dependency>
@@ -191,6 +195,19 @@
 			<version>6.1.0</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.webjars.bower/momentjs -->
+		<dependency>
+			<groupId>org.webjars.bower</groupId>
+			<artifactId>momentjs</artifactId>
+			<version>2.22.0</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.webjars/moment-timezone -->
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>moment-timezone</artifactId>
+			<version>0.5.5</version>
+		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.webjars.npm/angular-chartist.js -->
 		<dependency>
