--- a/WebJar-app/pom.xml
+++ b/WebJar-app/pom.xml
@@ -264,6 +264,12 @@
 			<version>5.5.1</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-core -->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-core</artifactId>
+			<version>5.0.5.RELEASE</version>
+		</dependency>
 
 		<!-- <dependency> <groupId>org.webjars.bower</groupId> <artifactId>momentjs</artifactId> 
 			<version>2.22.0</version> </dependency> <dependency> <groupId>org.webjars</groupId> 
